# PotatoGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CopyDLL.cmake  LICENSE  README.md  design.excalidraw  premake5.lua  regenerate.ps1  setup.ps1
.project/: project.toml
GameEngineProject/: asset.db  imgui.ini
GameEngineProject/assets/editor/test/: test.wren
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/Assets/: Asset.h  AssetDatabase.cpp  AssetDatabase.h
editor/src/ImGui/: Theme.cpp  Theme.h
editor/src/Menu/: Menu.cpp  Menu.h
editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  PanelInterface.h
editor/src/Utils/: FileUtils.cpp
editor/themes/: deep_dark.toml
engine/: CMakeLists.txt  add.cpp  engine.cpp  main.cpp  premake5.lua
engine/src/: Application.cpp  Application.h  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetImporter.h  Engine.cpp  Engine.h  engine.cpp  engine.hpp  potato.cpp  potato.h
engine/src/Application/: Application.cpp  Application.h
engine/src/Assets/: Asset.cpp  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetImporter.h
engine/src/Core/: Application.cpp  Application.h  SceneManager.cpp  SceneManager.h  Window.cpp  Window.h
engine/src/Debug/: Instrumentor.cpp  Instrumentor.h  Logger.cpp  Logger.h
engine/src/ImGui/: ImGui.cpp  ImGui.h  Menu.cpp  Menu.h  PanelInterface.h  Theme.cpp  Theme.h
engine/src/Math/: Vector2.h  Vector3.h  Vector4.h
engine/src/Renderer/: Color.cpp  Color.h  IRenderer.h  Mesh.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h
engine/src/Renderer/OpenGL/: OpenGL.cpp  OpenGL.h  Renderer2D.cpp  Renderer3D.cpp
engine/src/Scripting/: Scripting.cpp  Scripting.h
engine/src/UniversalAssetFormat/: UniversalAssetFormat.cpp  UniversalAssetFormat.h
engine/src/asset_manager/: asset_manager.cpp  asset_manager.h
engine/src/events/: event.hpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
sandbox/: CMakeLists.txt  premake5.lua
sandbox/src/: main.cpp
scripts/: build.ps1  run_editor.ps1  setup.ps1  setup.sh
